# lihu-ansible

./: pyproject.toml
playbooks/: bootstrap_package_manager_bindings.yml  install_dotfiles.yml  install_misc_software.yml
